changed correct/incorrect coloring, fixed bug with correct option not showing.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,9 +18,9 @@ html {
   --color-light: #f1f3f5;
 
   /* theme colors */
-  --color-theme-dark: #1098ad;
-  --color-theme-light: #14c1dc;
   --color-accent: #ffa94d;
+  --color-correct: #b9ff66;
+  --color-incorrect: #da1610;
 }
 
 /*------ CLEAN SLATE STYLES ------*/
@@ -127,12 +127,12 @@ a {
 
 .btn {
   font-size: 2rem;
-  color: var(--color-light);
+  color: var(--color-accent);
   font-weight: 500;
   text-align: center;
   padding: 0.75rem;
   background-color: var(--color-darkest);
-  border: var(--color-light) inset;
+  border: var(--color-accent) inset;
   border-radius: 1rem;
   margin: 0.3rem;
 }
@@ -140,28 +140,26 @@ a {
 .btn:hover,
 .btn-selected {
   border: var(--color-accent) inset;
-  color: var(--color-accent);
+  color: var(--color-darkest);
+  background-color: var(--color-accent);
 }
 
-/* styling for correct choice, for user feedback */
-.correct {
-  border: var(--color-theme-accent) 0.75rem solid;
-  background-color: var(--color-accent);
-  color: var(--color-darkest);
+.btn-unselected {
+  border: var(--color-light);
+  color: var(--color-light);
+  background-color: var(--color-darkest);
 }
+
+/* styling for correct / incorrect choice, for user feedback */
 
 .correct-btn {
-  background-color: var(--color-accent);
-  color: var(--color-darkest);
-}
-
-/* Styling for incorrect choice */
-.incorrect {
-  border: var(--color-theme-dark) 0.75rem solid;
+  background-color: var(--color-correct);
+  color: var(--color-dark);
 }
 
 .incorrect-btn {
-  background-color: var(--color-theme-dark);
+  background-color: var(--color-incorrect);
+  color: var(--color-light);
 }
 
 /*------ MODAL STYLES ------*/
